# lynx

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  STORAGE_IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml  run_storage_tests.sh  test_run.py  verify_storage.py
.claude/commands/: settings.local.json  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.specify.md  speckit.tasks.md  speckit.taskstoissues.md
docs/plans/: 2026-01-01-auto-fetch-adjusted-prices-design.md  2026-01-01-auto-fetch-adjusted-prices.md  2026-01-01-backtest-engine-design.md  2026-01-01-backtest-engine-implementation.md
examples/: test_2330_ma5.py
scripts/: generate_test_data.py
src/lynx/: __init__.py  cli.py  config.py  exceptions.py  metrics.py  run.py
src/lynx/backtest/: __init__.py  costs.py  defaults.py  engine.py  validators.py
src/lynx/dashboard/: __init__.py  server.py
src/lynx/dashboard/frontend/: index.html  package.json  vite.config.ts
src/lynx/dashboard/frontend/src/: App.tsx  index.css
src/lynx/dashboard/frontend/src/api/: client.ts
src/lynx/dashboard/static/: index.html
src/lynx/data/: __init__.py  cache.py  exceptions.py  yahoo.py
src/lynx/display/: __init__.py  coverage.py  explain.py  health.py  metrics_format.py  plot.py  stats.py  time_format.py
src/lynx/storage/: __init__.py  parquet.py  sqlite.py
tests/: README.md  conftest.py  test_fixtures.py
tests/fixtures/: sample_trades.csv
tests/integration/: __init__.py  test_backtest.py  test_backtest_auto_fetch.py  test_dashboard.py  test_log_workflow.py  test_yahoo_integration.py
tests/unit/: test_backtest_auto_fetch.py  test_backtest_costs.py  test_backtest_defaults.py  test_backtest_engine.py  test_backtest_validators.py  test_cli.py  test_config.py  test_data_cache.py  test_data_yahoo.py  test_display.py  test_exceptions.py  test_metrics.py  test_run.py  test_storage.py
(+18 files in other folders)
